Cria page 404 e adiciona page de Alunos
